force-app/main/default/objects/Negative_Thought_Analysis__c/Negative_Thought_Analysis__c.object-meta.xml
<CustomObject>
    <description>AI-powered analysis of negative thoughts with cognitive distortion detection and reframing suggestions</description>
    <label>Negative Thought Analysis</label>
    <pluralLabel>Negative Thought Analyses</pluralLabel>
    <nameField>
        <displayFormat>NTA-{0000}</displayFormat>
        <label>Analysis Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>