force-app/main/default/objects/Negative_Thought_Analysis__c/fields/AI_Confidence__c.field-meta.xml
<CustomField>
    <fullName>AI_Confidence__c</fullName>
    <label>AI Confidence</label>
    <description>AI confidence level in the analysis (0-100%)</description>
    <type>Percent</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>