force-app/main/default/objects/Negative_Thought_Analysis__c/fields/Analysis_Date__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Date__c</fullName>
    <label>Analysis Date</label>
    <description>When the analysis was performed</description>
    <type>DateTime</type>
    <required>true</required>
    <defaultValue>NOW()</defaultValue>
</CustomField>