force-app/main/default/objects/Negative_Thought_Analysis__c/fields/Detected_Distortions__c.field-meta.xml
<CustomField>
    <fullName>Detected_Distortions__c</fullName>
    <label>Detected Distortions</label>
    <description>All cognitive distortions detected in the thought</description>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All-or-Nothing Thinking</fullName>
            </value>
            <value>
                <fullName>Overgeneralization</fullName>
            </value>
            <value>
                <fullName>Mental Filter</fullName>
            </value>
            <value>
                <fullName>Disqualifying Positives</fullName>
            </value>
            <value>
                <fullName>Jumping to Conclusions</fullName>
            </value>
            <value>
                <fullName>Magnification</fullName>
            </value>
            <value>
                <fullName>Emotional Reasoning</fullName>
            </value>
            <value>
                <fullName>Should Statements</fullName>
            </value>
            <value>
                <fullName>Labeling</fullName>
            </value>
            <value>
                <fullName>Personalization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>