force-app/main/default/objects/Negative_Thought_Analysis__c/fields/Helpfulness_Rating__c.field-meta.xml
<CustomField>
    <fullName>Helpfulness_Rating__c</fullName>
    <label>Helpfulness Rating</label>
    <description>How helpful was the AI suggestion (1-10)</description>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>