force-app/main/default/objects/Negative_Thought_Analysis__c/fields/Mood_Entry__c.field-meta.xml
<CustomField>
    <fullName>Mood_Entry__c</fullName>
    <label>Mood Entry</label>
    <description>Lookup to related mood entry</description>
    <type>Lookup</type>
    <referenceTo>Mood_Entry__c</referenceTo>
    <relationshipLabel>Negative Thought Analyses</relationshipLabel>
    <relationshipName>Negative_Thought_Analyses</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>