force-app/main/default/objects/Negative_Thought_Analysis__c/fields/Original_Thought__c.field-meta.xml
<CustomField>
    <fullName>Original_Thought__c</fullName>
    <label>Original Thought</label>
    <description>The original negative thought to analyze</description>
    <type>LongTextArea</type>
    <length>2000</length>
    <required>true</required>
</CustomField>