force-app/main/default/objects/Negative_Thought_Analysis__c/fields/Primary_Distortion__c.field-meta.xml
<CustomField>
    <fullName>Primary_Distortion__c</fullName>
    <label>Primary Distortion</label>
    <description>The primary cognitive distortion identified</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All-or-Nothing Thinking</fullName>
            </value>
            <value>
                <fullName>Overgeneralization</fullName>
            </value>
            <value>
                <fullName>Mental Filter</fullName>
            </value>
            <value>
                <fullName>Disqualifying Positives</fullName>
            </value>
            <value>
                <fullName>Jumping to Conclusions</fullName>
            </value>
            <value>
                <fullName>Magnification</fullName>
            </value>
            <value>
                <fullName>Emotional Reasoning</fullName>
            </value>
            <value>
                <fullName>Should Statements</fullName>
            </value>
            <value>
                <fullName>Labeling</fullName>
            </value>
            <value>
                <fullName>Personalization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>