force-app/main/default/objects/Negative_Thought_Analysis__c/fields/Processed_By_AI__c.field-meta.xml
<CustomField>
    <fullName>Processed_By_AI__c</fullName>
    <label>Processed By AI</label>
    <description>Whether this analysis was processed by AI</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>