force-app/main/default/objects/Negative_Thought_Analysis__c/fields/Reframe_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>Reframe_Suggestion__c</fullName>
    <label>Reframe Suggestion</label>
    <description>AI-generated reframe suggestion</description>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>