force-app/main/default/objects/Negative_Thought_Analysis__c/fields/Severity_Score__c.field-meta.xml
<CustomField>
    <fullName>Severity_Score__c</fullName>
    <label>Severity Score</label>
    <description>Severity of the negative thought (1-10)</description>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>