force-app/main/default/objects/Negative_Thought_Analysis__c/fields/User_Reframe__c.field-meta.xml
<CustomField>
    <fullName>User_Reframe__c</fullName>
    <label>User Reframe</label>
    <description>User's own reframe of the negative thought</description>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>