force-app/main/default/objects/Negative_Thought_Analysis__c/validationRules/Helpfulness_Rating_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Helpfulness_Rating_Range</fullName>
    <active>true</active>
    <description>Ensures helpfulness rating is between 1 and 10</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Helpfulness_Rating__c)),
    OR(Helpfulness_Rating__c &lt; 1, Helpfulness_Rating__c &gt; 10)
)</errorConditionFormula>
    <errorDisplayField>Helpfulness_Rating__c</errorDisplayField>
    <errorMessage>Helpfulness Rating must be between 1 and 10.</errorMessage>
</ValidationRule>